--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,9 @@
     <div class="container main-container">
         <h1>Demo <small>angular</small></h1>
         <hr>
-        <app-ng-style></app-ng-style>
+        <!-- <app-ng-style></app-ng-style> -->
+        <app-css></app-css>
+        <p>Hola mundo desde app.compoent</p>
     </div>
 </body>
 
