--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,9 @@
         <h1>Demo <small>angular</small></h1>
         <hr>
         <!-- <app-ng-style></app-ng-style> -->
-        <app-css></app-css>
-        <p>Hola mundo desde app.compoent</p>
+        <!-- <app-css></app-css>
+        <p>Hola mundo desde app.compoent</p> -->
+        <app-clases></app-clases>
     </div>
 </body>
 
