--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,8 @@
         <!-- <app-ng-style></app-ng-style> -->
         <!-- <app-css></app-css>
         <p>Hola mundo desde app.compoent</p> -->
-        <app-clases></app-clases>
+        <!-- <app-clases></app-clases> -->
+        <p [appResaltado]="'red'">Hola Mundo</p>
     </div>
 </body>
 
