--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,8 @@
         <!-- <app-css></app-css>
         <p>Hola mundo desde app.compoent</p> -->
         <!-- <app-clases></app-clases> -->
-        <p [appResaltado]="'red'">Hola Mundo</p>
+        <!-- <p [appResaltado]="'red'">Hola Mundo</p> -->
+        <app-ng-switch></app-ng-switch>
     </div>
 </body>
 
