--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,15 +5,13 @@
 </head>
 
 <body>
+    <app-navbar></app-navbar>
     <div class="container main-container">
         <h1>Demo <small>angular</small></h1>
         <hr>
-        <!-- <app-ng-style></app-ng-style> -->
-        <!-- <app-css></app-css>
-        <p>Hola mundo desde app.compoent</p> -->
-        <!-- <app-clases></app-clases> -->
-        <!-- <p [appResaltado]="'red'">Hola Mundo</p> -->
-        <app-ng-switch></app-ng-switch>
+
+        <router-outlet></router-outlet>
+
     </div>
 </body>
 
